Fixed toolbar margins when sidebars are collapsed

--- a/app/styles/ui.less
+++ b/app/styles/ui.less
@@ -118,16 +118,20 @@
 }
 
 .collapsed-right {
-  #canvas,
-  #toolbar {
+  #canvas {
     padding-left: 0;
+  }
+  #toolbar {
+    margin-left: 0;
   }
 }
 
 .collapsed-left {
-  #canvas,
-  #toolbar {
+  #canvas {
     padding-right: 0;
+  }
+  #toolbar {
+    margin-right: 0;
   }
 }
 
